# RRStudio

./: .gitattributes  .gitignore  README.md  RosreestrStudio.sln  sync.ffs_db
InspectorAct/: Form1.Designer.cs  Form1.cs  InspectionAct_v01.Generated.cs  InspectionAct_v01.designer.cs  InspectionAct_v01.xsd  InspectorAct.csproj  P_CommonSimpleType_v01.Generated.cs  Program.cs
RosreestrStudio_vs150/: RosreestrStudio_vs150.sln
RosreestrTypes/: Class1.cs  DataChecker.cs  RRApiFir.cs  RRApiPKK5.cs  RRCommonCast.cs  RRConst.cs  RRMapServer_JSON.cs  RRTypes.csproj  RRTypes_3_5.csproj  firViewer.Designer.cs  firViewer.cs  pkk5Viewer.cs
TExpress.DisAss/: Form1.Designer.cs  Form1.cs  Program.cs  TExpress.DisAss.csproj
TestConsole/: Program.cs  TestConsole.csproj  networks.cs
Traverser/: AboutForm.Designer.cs  ClassDiagram1.cd  ClassDiagram2.cd  Form1.Designer.cs  Form1.resx  FteoPoints.cs  Fteo_Points.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MapPlan_v01.xsd  NikonRaw.cs  Program.cs  Report1.rdlc  Settings.cs  Traverser.csproj  (+11 more)
cspConsole/: Makefile.am  README.md  WebClient.c  WebServer.c  base64.c  base64.h  boost_examples.cpp  boost_examples.h  cmsenclo.c  cmslow.c  cmssf.c  cryptenc.c  cryptlo.c  cryptsf.c  csptest.vcproj  csptest.vcxproj  csptest.vcxproj.filters  ctkey.c  ctmsg.c  delayhlp.cpp  delayhlp7.cpp  export.c  getop1.c  getopt.c  getopt.h  hashlo.c  makecert.c  makecert.h  msqueue.c  mtime.c  mycert.c  mycert.h  property.c  reqcert.c  signlo.c  signlo1.c  signtsf.c  stdafx.c  stress.c  tls.c  (+4 more)
cspConsole/src/include/: WinCryptEx.h  crypt32.h
(+694 files in other folders)
